force-app/main/default/objects/MembroGrupoAtribuicao__c/MembroGrupoAtribuicao__c.object-meta.xml
<CustomObject>
    <description>Tabela de junção entre GrupoAtribuicao__c e User</description>
    <label>Membro do Grupo de Atribuição</label>
    <nameField>
        <displayFormat>MGA-{0000}</displayFormat>
        <label>Membros do Grupo de Atribuição</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membros dos Grupos de Atribuições</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>