force-app/main/default/objects/MembroGrupoAtribuicao__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <description>Verificar se o usuário membro do grupo está ativo</description>
    <formula>IF(User__r.IsActive = true, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>