force-app/main/default/objects/MembroGrupoAtribuicao__c/fields/GrupoAtribuicao__c.field-meta.xml
<CustomField>
    <fullName>GrupoAtribuicao__c</fullName>
    <label>Grupo de Atribuição</label>
    <referenceTo>GrupoAtribuicao__c</referenceTo>
    <relationshipLabel>Membros dos Grupos de Atribuições</relationshipLabel>
    <relationshipName>MembrosGrupoAtribuicao</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>