force-app/main/default/objects/MembroGrupoAtribuicao__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ultimo Lead Atribuido</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Membros dos Grupos de Atribuições</relationshipLabel>
    <relationshipName>MembroGrupoAtribuicoes</relationshipName>
    <type>Lookup</type>
</CustomField>