force-app/main/default/objects/MembroGrupoAtribuicao__c/fields/Loja__c.field-meta.xml
<CustomField>
    <fullName>Loja__c</fullName>
    <formula>text(User__r.Loja__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loja</label>
    <type>Text</type>
</CustomField>