force-app/main/default/objects/MembroGrupoAtribuicao__c/fields/UltimaDataAtribuicao__c.field-meta.xml
<CustomField>
    <fullName>UltimaDataAtribuicao__c</fullName>
    <description>Ultima data que o usuário teve atribuição no grupo.
Campo utilizado para controlar a precedência de atribuições</description>
    <label>Ultima Data de Atribuição</label>
    <type>DateTime</type>
</CustomField>