force-app/main/default/objects/MembroGrupoAtribuicao__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membro do Grupo de Atribuição</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MembrosGrupoAtribuicao</relationshipName>
    <type>Lookup</type>
</CustomField>